@@ -1,3 +1,10 @@
+2007-03-26  Janis Johnson  <janis187@us.ibm.com>
+
+	* gcc.dg/dfp/decfloat-constants.c: Check that __STDC_WANT_DEC_FP__
+	is defined, not that it is 1.
+	* gcc.dg/dfp/convert-dfp.c: Ditto.
+	* gcc.dg/dfp/convert-int-saturate.c: Ditto.
+
 2007-03-08  Janis Johnson  <janis187@us.ibm.com>
 
 	* gcc.dg/dfp/signbit-1.c
