@@ -1,3 +1,8 @@
+2007-03-26  Janis Johnson  <janis187@us.ibm.com>
+
+	* ginclude/float.h (decimal float support): Check that
+	__STDC_WANT_DEC_FP__ is defined, not that it is 1.
+
 2007-03-08  Janis Johnson  <janis187@us.ibm.com>
 
 	* Makefile.in: Fix names of DFP conversion functions.
